qt gui: insn dialog: Say that we allow basic HTML

--- a/src/qt/emilpro/editinstructiondialog.ui
+++ b/src/qt/emilpro/editinstructiondialog.ui
@@ -92,6 +92,13 @@
       </layout>
      </item>
      <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Description (basic HTML tags allowed)</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QTextEdit" name="instructionDescriptionTextEdit"/>
      </item>
     </layout>
